--- a/src/index.css
+++ b/src/index.css
@@ -69,26 +69,35 @@ main{
 }
 
 .weather-box {
-  text-align: center;
+  width: 40%;
+  margin:  75px auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+  padding: 15px 55px;
+
+  
 
 }
 
 .weather-box .temp{
-  position: relative;
-  display: inline-block;
-  margin: 30px auto;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
-
-  padding: 15px 25px;
-
   color: #FFF;
   font-size: 102px;
   font-weight: 900;
   
   text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
   text-align: center;
-  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+  
+}
+
+.weather-box .icon{
+  color: #FFF;
+  font-size: 102px;
+  font-weight: 900;
+  
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  text-align: center;
+  
 }
 
 .weather-box .weather{
@@ -96,4 +105,5 @@ main{
   font-size: 48px;
   font-weight: 700;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  text-align: center;
 }
