--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,6 @@ main{
 
 .search-box{
  width: 50%;
- position: relative;
  margin: 75px auto;
 }
 
@@ -38,7 +37,7 @@ main{
   outline: none;
 
   background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 16px 16px 16px;
+  border-radius: 16px 16px 16px 16px;
 
   box-shadow: 0px 5px rgba(0, 0, 0, 0.3);
 
