--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ main{
   border: none;
   outline: none;
 
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.514);
   border-radius: 16px 16px 16px 16px;
 
   box-shadow: 0px 5px rgba(0, 0, 0, 0.3);
@@ -117,4 +117,56 @@ main{
   font-weight: 700;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
   text-align: center;
+}
+
+
+.form-inner{
+   width: 35%;
+  margin:  75px auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+  padding: 15px 55px;
+}
+
+.form-inner .form-group1{
+  color: #FFF;
+  text-align: center;
+
+}
+
+.form-inner .form-group2{
+  color: #FFF;
+  font-size: 25px;
+  font-weight: 100; 
+  text-align: center;
+
+}
+
+
+.form-group2 .search-bar{
+  display:inline-block;
+  width: 100%;
+  padding: 8px;
+
+  appearance: none;
+  
+  border: none;
+  background: none;
+  outline: none;
+
+  background-color: rgba(255, 255, 255, 0.377);
+  border-radius: 16px 16px 16px 16px;
+
+  box-shadow: 0px 5px rgba(0, 0, 0, 0.3);
+
+  color:  #313131;
+  font-size: 20px;
+
+  transition: 0.4s ease;
+
+}
+
+.form-group2 .search-bar:focus{
+  background-color: rgba(255, 255, 255, 0.75);
 }
