--- a/src/index.css
+++ b/src/index.css
@@ -121,12 +121,14 @@ main{
 
 
 .form-inner{
-   width: 35%;
+  width: 500px;
+  height: 300px;
   margin:  75px auto;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
+  background-color: rgba(255, 255, 255, 0.774);
+  border-radius: 7px;
   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
-  padding: 15px 55px;
+  padding: 20px 55px;
+  text-align: center;
 }
 
 .form-inner .form-group1{
@@ -169,4 +171,15 @@ main{
 
 .form-group2 .search-bar:focus{
   background-color: rgba(255, 255, 255, 0.75);
+}
+
+.bg-modal{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.657);
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
