--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ main{
   min-height: 100vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.45));
   padding: 25px;
+  
 }
 
 .search-box{
@@ -121,14 +122,14 @@ main{
 
 
 .form-inner{
-  width: 500px;
+  width: 450px;
   height: 300px;
-  margin:  75px auto;
   background-color: rgba(255, 255, 255, 0.774);
   border-radius: 7px;
   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
-  padding: 20px 55px;
+  padding: 20px 45px;
   text-align: center;
+  position: relative;
 }
 
 .form-inner .form-group1{
@@ -149,7 +150,7 @@ main{
 .form-group2 .search-bar{
   display:inline-block;
   width: 100%;
-  padding: 8px;
+  padding: 4px;
 
   appearance: none;
   
@@ -158,12 +159,12 @@ main{
   outline: none;
 
   background-color: rgba(255, 255, 255, 0.377);
-  border-radius: 16px 16px 16px 16px;
+  border-radius: 6px 6px 6px 6px;
 
-  box-shadow: 0px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px rgba(0, 0, 0, 0.3);
 
   color:  #313131;
-  font-size: 20px;
+  font-size: 15px;
 
   transition: 0.4s ease;
 
@@ -182,4 +183,14 @@ main{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.form-inner .close{
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 42px;
+  transform: (45deg);
+  cursor: pointer;
+
 }
