--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body{
 
 main{
   min-height: 100vh;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.45));
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.582));
   padding: 25px;
   
 }
@@ -197,5 +197,23 @@ main{
 .form-inner button{
   border-radius: 18px;
   border: 0px;
+}
+
+
+.logo .mainlogo{
+  height: 550px;
+  width: 1450px;
+  max-height: 800px;
+  max-width: 100%;
+  border-radius: 7px;
+  padding: 10px 10px;
+  text-align: center;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  top: 150px;
+  bottom: 300px;
+  left: 200px;
+  right:auto; 
 }
 
