--- a/src/index.css
+++ b/src/index.css
@@ -185,7 +185,18 @@ main{
   align-items: center;
 }
 
-.form-inner .close{
+.modal-main{
+  width: 450px;
+  height: 300px;
+  background-color: rgba(255, 255, 255, 0.774);
+  border-radius: 7px;
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+  padding: 20px 45px;
+  text-align: center;
+  position: relative;
+}
+
+.modal-main .close{
   position: absolute;
   top: 10px;
   right: 20px;
@@ -194,11 +205,23 @@ main{
   cursor: pointer;
 
 }
-.form-inner button{
+.modal-main button{
   border-radius: 18px;
   border: 0px;
 }
 
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
+
+.logo{
+  text-align: center;
+}
 
 .logo .mainlogo{
   height: 550px;
@@ -211,9 +234,27 @@ main{
   position: relative;
   justify-content: center;
   align-items: center;
-  top: 150px;
-  bottom: 300px;
-  left: 200px;
-  right:auto; 
+  
+  
 }
 
+.wi-time-1{
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 42px;
+  transform: (45deg);
+  
+}
+
+
+.homepage button{
+  border-radius: 18px;
+  border: 0px;
+  padding:10px 50px;
+  text-align: center;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  
+}
