--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,12 @@ body{
 main{
   min-height: 100vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.582));
-  padding: 25px;
+  padding: 0px;
   
 }
 
 .search-box{
- width: 50%;
+ width:30%;
  margin: 75px auto;
 }
 
@@ -84,9 +84,8 @@ main{
 .weather-box {
   width: 35%;
   margin:  75px auto;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(0, 0, 0, 0.657);
   border-radius: 16px;
-  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
   padding: 15px 55px; 
 
 }
@@ -175,34 +174,32 @@ main{
 }
 
 .bg-modal{
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.657);
-  position: absolute;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100% !important;
+  height: 100% !important;
+  background-color: rgba(0, 0, 0, 0.657) !important;
+  position: absolute !important;
+  top: 0 !important;
+  display: flex ;
+  justify-content: center !important;
+  align-items: center !important;
 }
 
-.modal-main{
+.modal-header{
+  display: inline !important;
+}
+
+.modal-body{
   width: 450px;
   height: 300px;
-  background-color: rgba(255, 255, 255, 0.774);
+  background-color: rgba(255, 255, 255, 0.376);
   border-radius: 7px;
-  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
   padding: 20px 45px;
   text-align: center;
   position: relative;
 }
 
-.modal-main .close{
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 42px;
-  transform: (45deg);
-  cursor: pointer;
+.modal-content{
+  align-items: center
 
 }
 .modal-main button{
@@ -257,4 +254,63 @@ main{
   justify-content: center;
   align-items: center;
   
+}
+
+label {
+  position: relative;
+}
+
+label:before {
+  content: "";
+  position: absolute;
+  left: 10px;
+  top: 0;
+  bottom: 0;
+  width: 20px;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 25 25' fill-rule='evenodd'%3E%3Cpath d='M16.036 18.455l2.404-2.405 5.586 5.587-2.404 2.404zM8.5 2C12.1 2 15 4.9 15 8.5S12.1 15 8.5 15 2 12.1 2 8.5 4.9 2 8.5 2zm0-2C3.8 0 0 3.8 0 8.5S3.8 17 8.5 17 17 13.2 17 8.5 13.2 0 8.5 0zM15 16a1 1 0 1 1 2 0 1 1 0 1 1-2 0'%3E%3C/path%3E%3C/svg%3E") center / contain no-repeat;
+}
+
+input {
+  padding: 10px 30px;
+}
+
+.header{
+ text-align: center;
+ background-color: rgba(0, 0, 0, 0.657);
+ background-position: 0% 0%;
+ height: 70px;
+ width: 100%;
+ padding: 4px 16px 4px 16px;
+ display: flex;
+ transition: all 0s ease 0s;
+
+}
+
+.search-box1{
+ width:60%;
+ margin: 12px auto;
+}
+
+.search-box1 .search-bar{
+  display: block;
+  width: 100%;
+  padding: 6px;
+
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+
+  background-color: rgba(255, 255, 255, 0.685);
+  border-radius: 16px 16px 16px 16px;
+
+
+  color:  #080808;
+  font-size: 16px;
+
+  transition: 0.4s ease;
+}
+
+.search-box1 .search-bar:focus{
+  background-color: rgb(255, 255, 255);
 }
