--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,8 @@ main{
   margin:  75px auto;
   background-color: rgba(0, 0, 0, 0.657);
   border-radius: 16px;
-  padding: 15px 55px; 
+  padding: 15px 55px;
+  position: flex; 
 
 }
 
@@ -302,7 +303,7 @@ input {
   outline: none;
 
   background-color: rgba(255, 255, 255, 0.685);
-  border-radius: 16px 16px 16px 16px;
+  border-radius: 11px 11px 11px 11px;
 
 
   color:  #080808;
@@ -313,4 +314,10 @@ input {
 
 .search-box1 .search-bar:focus{
   background-color: rgb(255, 255, 255);
+}
+
+.header-logo{
+  height: 60px;
+  width: 240px;
+  margin: 8px 10px 8px;
 }
