--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body{
 }
 
 .app{
-  background-image: url('./Images/sunny day.jpeg');
+  background-image: url('./Images/homescreenbg.jpg');
   background-size: cover;
   background-position: bottom;
   transition: 0.4 ease-out;
@@ -222,8 +222,8 @@ main{
 }
 
 .logo .mainlogo{
-  height: 550px;
-  width: 1450px;
+  height: 300px;
+  width: 900px;
   max-height: 800px;
   max-width: 100%;
   border-radius: 7px;
