--- a/src/index.css
+++ b/src/index.css
@@ -56,12 +56,18 @@ main{
   background-color: rgba(255, 255, 255, 0.75);
 }
 
+.location-box{
+  margin-top:80px ; 
+
+}
+
 .location-box .location{
   color: #FFF;
-  font-size: 50px;
-  font-weight: 300;
+  font-size: 70px;
+  font-weight: 500px;
   text-align: center;
-  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+ 
+
 }
 
 .location-box .date{
@@ -70,7 +76,7 @@ main{
   font-weight: 300;
   font-style: italic;
   text-align: center;
-  text-shadow: 2px 2px rgba(50, 50, 70, 0.5); 
+ 
 }
 
 .time{
@@ -97,7 +103,7 @@ main{
   font-size: 102px;
   font-weight: 900;
   
-  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  
   text-align: center;
   
 }
@@ -107,7 +113,7 @@ main{
   font-size: 102px;
   font-weight: 900;
   
-  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  
   text-align: center;
   
 }
@@ -116,7 +122,7 @@ main{
   color: #FFF;
   font-size: 48px;
   font-weight: 700;
-  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  
   text-align: center;
 }
 
@@ -222,8 +228,9 @@ main{
 }
 
 .logo .mainlogo{
-  height: 300px;
-  width: 900px;
+  margin-top: 90px;
+  height: 350px;
+  width: 1050px;
   max-height: 800px;
   max-width: 100%;
   border-radius: 7px;
@@ -246,15 +253,30 @@ main{
 }
 
 
-.homepage button{
+.homepage .btn{
+  margin-top: 40px;
   border-radius: 18px;
   border: 0px;
-  padding:10px 50px;
+  padding:10px 40px;
   text-align: center;
   position: relative;
   justify-content: center;
   align-items: center;
-  
+  background-color: rgba(255, 254, 254, 0);
+  color: white;
+  border: 2px solid white;
+  transition: 0.3s;
+  outline: none;
+}
+
+.homepage .btn:hover{
+   background-color: black;
+  color: white;
+  border-color: black;
+}
+
+.homepage button span{
+  color: rgba(255, 255, 255, 0.801);
 }
 
 label {
@@ -320,4 +342,20 @@ input {
   height: 60px;
   width: 240px;
   margin: 8px 10px 8px;
+}
+
+.homepage{
+  width: 100%;
+  margin:  0;
+  border-radius: 16px;
+  padding: 15px 55px;
+  position: flex; 
+}
+
+.homepage .location{
+   color: rgba(255, 255, 255, 0.794);
+  font-size: 50px;
+  font-weight: 100px;
+  text-align: center;
+  
 }
