--- a/src/index.css
+++ b/src/index.css
@@ -365,3 +365,31 @@ input {
   text-align: center;
   
 }
+
+.header .btn{
+  height: 38px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 18px;
+  border: 0px;
+  padding: 6px 15px;
+  text-align: center;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 254, 254, 0);
+  color: white;
+  border: 2px solid white;
+  transition: 0.3s;
+  outline: none;
+}
+
+.header .btn:hover{
+   background-color: black;
+  color: white;
+  border-color: black;
+}
+
+.header button span{
+  color: rgba(255, 255, 255, 0.801);
+}
